# haskell-hacknix

./: .gitignore  README.md  cabal.project  default.nix  flake.nix  release.nix  shell.nix
.github/workflows/: bump-deps.yaml
hhp/: default.nix  hhp.cabal  hie.yaml  shell.nix
hhp/exe/: Main.hs
hhp/src/: MyLib.hs
nix/: default.nix  sources.json
nix/jobsets/: default.nix  release.nix  spec.json
nix/materialized/ghc-8.10.2-x86_64-darwin/cabal-fmt/: default.nix
nix/materialized/ghc-8.10.2-x86_64-darwin/cabal-fmt/.plan.nix/: cabal-fmt.nix
nix/materialized/ghc-8.10.2-x86_64-darwin/haskell-language-server/: ghcide.nix  haskell-language-server.nix
nix/materialized/ghc-8.10.2-x86_64-darwin/hhp/: default.nix
nix/materialized/ghc-8.10.2-x86_64-linux/cabal-fmt/: default.nix
nix/materialized/ghc-8.10.2-x86_64-linux/cabal-fmt/.plan.nix/: cabal-fmt.nix
nix/materialized/ghc-8.10.2-x86_64-linux/haskell-language-server/: default.nix
nix/materialized/ghc-8.10.2-x86_64-linux/hhp/: default.nix
nix/materialized/ghc-8.10.3-x86_64-darwin/hhp/.plan.nix/: hhp.nix
nix/materialized/ghc-8.10.3-x86_64-linux/cabal-fmt/: default.nix
nix/materialized/ghc-8.10.3-x86_64-linux/cabal-fmt/.plan.nix/: cabal-fmt.nix
nix/materialized/ghc-8.10.3-x86_64-linux/hhp/: default.nix
nix/materialized/ghc-8.6.5-x86_64-darwin/haskell-language-server/: hls-plugin-api.nix
nix/materialized/ghc-8.6.5-x86_64-darwin/hhp/: default.nix
nix/materialized/ghc-8.6.5-x86_64-darwin/purescript/: default.nix  purescript.nix
nix/materialized/ghc-8.6.5-x86_64-linux/haskell-language-server/: .stack-to-nix.cache  default.nix
nix/materialized/ghc-8.6.5-x86_64-linux/hhp/: default.nix
nix/materialized/ghc-8.8.4-x86_64-darwin/haskell-language-server/: default.nix
nix/materialized/ghc-8.8.4-x86_64-darwin/hhp/: default.nix
nix/materialized/ghc-8.8.4-x86_64-linux/haskell-language-server/: .stack-to-nix.cache.0
nix/materialized/ghc-8.8.4-x86_64-linux/hhp/: default.nix
nix/materialized/ghc-8.8.4-x86_64-linux/hhp/.plan.nix/: hhp.nix
nix/overlays/: hacknix.nix  haskell-packages.nix  haskell.nix  lib.nix
nix/pkgs/: cabal-fmt.nix  ghcide.nix  hie.nix  hls.nix
