cabal-version:         2.4

name:                  hhp
version:               1.0.0.0
synopsis:              A test haskell-hacknix project
category:              Example
stability:             stable
license:               BSD-3-Clause
license-file:          LICENSE
copyright:             © 2020 Hackworth Ltd
author:                Drew Hess <dhess-src@hackworthltd.com>
maintainer:            dhess-src@hackworthltd.com

common deps
  build-depends:       base >=4.12 && <5
                     , bytestring >=0.10.8.2 && <0.11
                     , containers >=0.6.0.1 && <0.7
                     , directory >=1.3.3.0 && <1.4
                     , exceptions ^>=0.10.4
                     , extra ^>=1.7
                     , filepath ^>=1.4.2.1
                     , fmt ^>=0.6.1.2
                     , generic-lens ^>=2.0.0.0
                     , lens ^>=4.19.1
                     , megaparsec ^>=8.0.0
                     , mtl ^>=2.2.2
                     , neat-interpolation ^>=0.5.1
                     , prettyprinter ^>=1.6.1
                     , prettyprinter-ansi-terminal ^>=1.1.1.2
                     , pretty-simple ^>=3.2.2.0
                     , protolude ^>=0.2.4
                     , recursion-schemes ^>=5.1.3
                     , semigroups ^>=0.19.1
                     , semigroupoids ^>=5.3.4
                     , text ^>=1.2.4.0
                     , transformers ^>=0.5.6.2
                     , vector ^>=0.12.1.2

common exts
  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                       DerivingStrategies
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       OverloadedStrings

common opts
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths

common defaults
  import:              deps, exts, opts

common exe
  import:              defaults
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

common test
  import:              defaults
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

library
  import:              defaults
  hs-source-dirs:      src
  exposed-modules:     MyLib

executable hhp
  import:              exe
  hs-source-dirs:      exe
  main-is:             Main.hs
  build-depends:       hhp
                     , optparse-applicative ^>=0.15.1.0


test-suite hhp-test
  import:              test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MyLibTest.hs
  build-depends:       hhp
                     , hspec ^>=2.7.1
                     , hspec-megaparsec ^>=2.1.0
                     , hedgehog ^>=1.0.2
                     , hedgehog-classes ^>=0.2.4.1
                     , hw-hspec-hedgehog ^>=0.1.0.9

test-suite hlint
  import:              test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , src
  main-is:             hlint.hs
  build-depends:       base
                     , hlint ^>=2.2.11
                     , protolude
